<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DineOn Restaurant</string>
    <string name="TaskTitle">Restaurant Order</string>
    <string name="item_rest_profile">Profile</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="content_desc_password">Input box for password</string>
    <string name="label_login">Log in</string>
    <string name="option_create_new_account"><u>Create New Account</u></string>
    <string name="option_forgot_password"><u>Forgot Password?</u></string>
    <string name="label_login_title">Log in to Work in Dine On</string>
    <string name="button_assign_waiter">Assign</string>
    <string name="content_description_dismiss">Dismiss the current request</string>
    <string name="label_request_blank">Request Title Goes here</string>
    <string name="label_order_blank">Order Title goes here</string>
    <string name="label_customer_blank">Customer Name goes here</string>
    <string name="content_description_complete_order">Click to instantly fulfill this order</string>
    <string name="hint_send_message">Message the customer</string>
    <string name="label_radio_urgency_normal">Normal</string>
    <string name="label_urgency_important">Important</string>
    <string name="label_urgency_priority">Do it NOW!</string>
    <string name="tablabel_profile">Profile</string>
    <string name="tablabel_menuitems">Menu Items</string>
    <string name="debug2">Another Test Message</string>
    <string name="debug3">YANT (Yet Another Test Message)</string>
    <string name="tab_actionbar_restaurant_profile">Profile</string>
    <string name="tab_actionbar_restaurant_menuitems">The Menu</string>
    <string name="hint_description">Description</string>
    <string name="hint_price">Price</string>
    <string name="hint_menuitem_title">Name</string>
    <string name="item_logout">Log Out</string>
    <string name="item_forgot_password">Forgot Password?</string>
    <string name="item_create_account">Create Account</string>
    <string name="activity_start_login">startLoginActivity</string>
    <string name="create_new_account">Create New Account</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password_repeat">Repeat Password</string>
    <string name="hint_restaurant_name">Your Restaurant Name</string>
    <string name="menu_add_menu_item">Add MenuItem</string>
    <string name="menu_switch_menu">Select Menu</string>
    <string name="husky_soft_logo">HuskySoft Logo</string>
    <string name="label_assign_to">Assign</string>
    <string name="button_assign">Assign Button</string>
    <string name="button_remove_request">Remove Request Button</string>
    <string name="label_request_default">Request Goes Here</string>
    <string name="label_time_default">May 13 2013 2:30:00 PM</string>
    <string name="button_accordion">Accordion Button</string>
    <string name="label_order_default">Order Goes Here</string>
    <string name="label_orders">Orders</string>
    <string name="label_order_contents">Order Contents</string>
    <string name="label_message_customer">Message Customer</string>
    <string name="button_remove_menu_item">Remove Menu Item</string>
    <string name="label_menu_item_thumbnail">Menu Item Image</string>
    <string name="dineonlogo">DineOn Logo</string>
    <string name="content_description_delete_current_image">Delete the current selected image</string>
    <string name="content_description_take_new_picture">Take a new picture to add it to your restaurant</string>
    <string name="content_description_get_image_from_gallery">Select a pre existing image on your phone to add to your restaurant</string>
    <string name="checkbox_default_image">Default</string>
    <string name="label_address">Address</string>
    <string name="label_phone">Phone</string>
    <string name="dineonad">DineOn Ad</string>
    <string name="item_rest_menu">Update your Menu!</string>
    <string name="dialog_title_getimage">Get an image</string>
    <string name="dialog_message_getimage_for_menuitem">Want to put your own image for this menu item?</string>
    <string name="dialog_option_take_picture">Take Pic</string>
    <string name="dialog_option_choose_picture">Choose Pic</string>
    <string name="cancel">Cancel</string>
    <string name="message_unable_get_image">Sorry we were not able to get the image</string>
    <string name="message_customers">Message Customers</string>
    <string name="hint_use_current_location">Use current location</string>
    <string name="hint_address_line">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_address_city">City</string>
    <string name="hint_address_state">State</string>
    <string name="hint_address_zipcode">Zipcode</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="label_hours">Hours</string>
    <string name="no_customer">No Customer!</string>
    <string name="table">"Table "</string>
    <string name="dash">" - "</string>
    <string name="no_orders">No Orders</string>
    <string name="cant_retrieve_name">Could not retrieve name.</string>
    <string name="newline">"\n"</string>
    <string name="save_changes">Save Changes</string>
    <string name="hint_hours_of_operation">Hours of operation</string>
    <string name="credit_card_header"><u>"Credit Card Information"</u></string>
    <string name="invalid_card">"Invalid Credit Card Information Entered"</string>
    <string name="disclaimer">By creating an account, you agree to allow DineOnRestaurant to charge your credit card a monthly fee of $99/month to use our service.</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="security_code">Security Code</string>
    <string name="expiration_month">Expiration Month</string>
    <string name="expiration_year">Expiration Year</string>
    <string name="zip_code">Zip Code</string>

    <string-array name="default_employees">
        <item>Bert</item>
        <item>Ernie</item>
        <item>Big Bird</item>
        <item>Cookie Monster</item>
    </string-array>
    
     <string-array name="fragment_titles">
        <item>Pending Orders</item>
        <item>Pending Requests</item>
        <item>Current Sessions</item>
    </string-array>

    <string name="title_complete_order">Served Up?</string>
    <string name="message_complete_order_question">Are you done with this order?  This order will be removed from this list.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="saving">Saving…</string>
    <string name="loading">Loading&#8230;</string>
    <string name="saving_new_image">Give me a little bit while we save your changes.</string>
    <string name="saving_menuitem">Please wait while we save your new menu item</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="not_logged_in">"Doesn\'t look like you're logged in."</string>
    <string name="failed">Failed to do something: </string>
    <string name="unable_to_confirm_dining_session">Unable to Confirm Dining Session</string>
    <string name="checked_in">User Checked In</string>
    <string name="user_changed">User Changed</string>
    <string name="null_restaurant">Null Restaurant when accepting user change</string>
    <string name="order_request">Order Request</string>
    <string name="error_saving_dining_session">Error saving dining session</string>
    <string name="reservation_request">Reservation Request</string>
    <string name="checked_out">Checked Out</string>
    <string name="saving">Saving&#8230;</string>
    <string name="login">Log in</string>
    <string name="logging_out">Cleaning up and logging out.</string>
    <string name="invalid_account">Invalid account. We have you in the database but we need you to create a Restaurant.</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="restaurant_part1">"Restaurant wants to sent message \""</string>
    <string name="restaurant_part2">"\" to user "</string>
    <string name="table_label">"Table :"</string>
    <string name="menu_item_label">"Menu Item :"</string>
    <string name="qty_label">"Quantity :"</string>
    <string name="new_line">"\n"</string>
    <string name="order_placed_by">"Order Placed By: "</string>
    <string name="qty_short">"Qty: "</string>
    <string name="id_label">"ID: "</string>
    <string name="normal">Normal</string>
    <string name="important">Important</string>
    <string name="priority">Priority</string>
    <string name="quick_response">Quick Response</string>
    <string name="request_from">"Request From: "</string>
    <string name="message">"Message: "</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="current_sessions">Current Sessions</string>
    <string name="shout_out">"Shout out to "</string>
    <string name="quote">" \"""</string>
    <string name="to">" to "</string>
    <string name="sending_customer_request">"Sending customer request "</string>
    <string name="emulator">"Location information not available on an emulator."</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="login_failure">Log in Failure</string>
    <string name="server_error">Server Error</string>
    <string name="getting_ready">Getting you ready to work!</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="no_restaurant">No Restaurant Account</string>
    <string name="no_restaurant_reason">"Unable to get your Restaurant account because: "</string>
    <string name="getting_restaurant">Getting you your own restaurant.</string>
    <string name="menu_added">Menu Added</string>
    <string name="no_menu">You have no menus!</string>
    <string name="cancel">Cancel</string>
    <string name="menu_label">"Menu: "</string>
    <string name="save">"Save"</string>
    <string name="select">"Select"</string>
    <string name="add_menu_item">Add New Menu Item</string>
    <string name="creating_new_menu">Crreating New Menu.</string>
    <string name="input_menu_item_details">Input Menu Item Details</string>
    <string name="pick_menu_title">Please choose a title for your first menu.</string>
    <string name="input_title_price">Please input title and price.</string>
    <string name="input_title">Please input title.</string>
    <string name="not_implemented">Sorry, not implemented yet.</string>
	<string name="menu_item_updated">Menu Item Updated!</string>
	<string name="rest_info_updated">Restaurant Info Updated!</string>
    <string name="unable_save_image">Unable to save image.</string>
    <string name="confirm_image_deletion">Confirm image deletion.</string>
    <string name="delete_confirmation">Are you sure you want to delete it?</string>
	<string name="yes">Yes</string>
    
</resources>