<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_new_rest_account"
    style="@style/DineOnLoginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_selector" >

    <LinearLayout
        style="@style/DineOnLoginLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/dine_on_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/dineonlogo"
            android:src="@drawable/dineonrestlogo" />

        <EditText
            android:id="@+id/input_createnewaccount_username"
            style="@style/DineOnLoginForm"
            android:layout_marginBottom="14dp"
            android:hint="@string/hint_restaurant_name"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_createnewaccount_email"
            style="@style/DineOnLoginForm"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/input_createnewaccount_password"
            style="@style/DineOnLoginForm"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/input_createnewaccount_repeat_password"
            style="@style/DineOnLoginForm"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_password_repeat"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_create_account"
            style="@style/DineOnLoginButton"
            android:layout_marginTop="20dp"
            android:background="@drawable/createnewrest" />

        <ImageView
            android:id="@+id/husky_soft_logo"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/husky_soft_logo"
            android:src="@drawable/husky_soft_logo" />
    </LinearLayout>

</ScrollView>