<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_thumbnail_menuitem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/label_menu_item_thumbnail"
        android:src="@drawable/placeholdermenuitem" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_menuitem_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_menuitem_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/label_menuitem_desc"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/hint_description" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_menuitem_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/hint_price" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/button_menuitem_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/button_remove_menu_item"
        android:src="@drawable/remove" />

</LinearLayout>