<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/input_menuitem_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_menuitem_title"
        android:imeOptions="actionNext"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/input_menuitem_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/input_menuitem_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_price"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

</LinearLayout>