<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
            android:id="@+id/label_order_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp"
            android:text="@string/label_orders"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
            android:id="@+id/label_order_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/label_time_default"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
            android:id="@+id/label_order_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:minHeight="30dp"
            android:text="@string/label_order_default"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>