<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ad"
            style="@style/DineOnAd"
            android:contentDescription="@string/dineonad"
            android:src="@drawable/ad" />

        <TextView
            android:id="@+id/label_request_title_detail"
            style="@style/DineOnHeadingBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/label_request_blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/label_request_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Table Number: " />

        <TextView
            android:id="@+id/label_request_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Time requested: " />

        <TextView
            android:id="@+id/label_request_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details: " />

        <TextView
            android:id="@+id/label_request_assign"
            style="@style/DineOnHeadingBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/label_assign_to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_staff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <RadioGroup
                android:id="@+id/radiogroup_urgency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radio_urgency_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/label_radio_urgency_normal" />

                <RadioButton
                    android:id="@+id/radio_urgency_important"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_urgency_important" />

                <RadioButton
                    android:id="@+id/radio_urgency_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_urgency_priority" />
            </RadioGroup>

            <ImageButton
                android:id="@+id/button_send_to_staff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:src="@drawable/social_forward" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_price_description"
            style="@style/DineOnHeadingBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/label_message_customer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edittext_send_message_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_send_message"
                android:inputType="textMultiLine" >
            </EditText>

            <ImageButton
                android:id="@+id/button_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:src="@drawable/message" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>