<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem_user_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:minHeight="30dp"
            android:text="@string/label_customer_blank"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/button_expand_user"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_accordion"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical|center_horizontal|right"
            android:minHeight="30dp"
            android:src="@drawable/navigation_expand" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_checkin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
</LinearLayout>